Add basic structure of the website(#2)

--- a/index.html
+++ b/index.html
@@ -2,10 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Etch A Sketch</title>
 </head>
 <body>
-    
+    <header><h1>Etch-A-Sketch</h1></header>
+    <section>
+        <div class="toolbox">
+            <h3>Toolbox</h3>
+            <div class="colour">
+                <span>Pen Colour</span>
+            </div>
+            <button>Eraser</button>
+            <button>Randomizer</button>
+            <button>Darken</button>
+            <button>Lighten</button>
+            <span>Bar</span>
+            <button>Grid Lines</button>
+            <button>Clear</button>
+        </div>
+        <div class="canvas">
+
+        </div>
+    </section>
+    <footer>
+        @JJThomtin
+        @Odin Project
+    </footer>
 </body>
 </html>
