--- a/index.html
+++ b/index.html
@@ -3,26 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Etch A Sketch</title>
 </head>
 <body>
     <header><h1>Etch-A-Sketch</h1></header>
     <section>
-        <div class="toolbox">
-            <h3>Toolbox</h3>
-            <div class="colour">
-                <span>Pen Colour</span>
+        <div class="sidebar">
+            <div class="controls">
+                <h3>Toolbox</h3>
+                <div class="colour">
+                    <span>Pen Colour</span>
+                </div>
+                <button id="eraser-btn">Eraser</button>
+                <button id="randomizer-btn">Colour Randomizer</button>
+                <button id="lighten-btn">Lighten</button>
+                <button id="darken-btn">Darken</button>
+                <span>Bar</span>
+                <input type="range" name="grid" id="grid-id" min="0" min="100">
+                <button id="clear-btn">Clear</button>
             </div>
-            <button>Eraser</button>
-            <button>Randomizer</button>
-            <button>Darken</button>
-            <button>Lighten</button>
-            <span>Bar</span>
-            <button>Grid Lines</button>
-            <button>Clear</button>
+            <button id="setting"><i class="fa fa-gear" style="font-size:36px;"></i></button>
         </div>
-        <div class="canvas">
+        <div id="container">
+            <div id="grid">
 
+            </div>
         </div>
     </section>
     <footer>
