Add canvas grid (#5)

--- a/index.html
+++ b/index.html
@@ -25,15 +25,14 @@
             </div>
             <button id="setting"><i class="fa fa-gear" style="font-size:36px;"></i></button>
         </div>
-        <div id="container">
-            <div id="grid">
+        <div id="canvas">
 
-            </div>
         </div>
     </section>
     <footer>
         @JJThomtin
         @Odin Project
     </footer>
+    <script src="javascript.js"></script>
 </body>
 </html>
