Implemented Clear Button (#7)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section>
         <div class="content">
             <div class="left-sidebar">
-                <span><strong>Toolbox</strong></span>
+                <span><h3>Toolbox</h3></span>
                 <div class="colour">
                     <span>Pen Colour</span>
                     <input type="color" name="colour" id="colour-wheel">
@@ -39,8 +39,11 @@
             
     </section>
     <footer>
-        <p><a href="">@JJThomtin</a><br>
-        <a href="">@Odin Project</a></p>
+        <p>
+        <a href="">@JJThomtin</a>
+        <br>
+        <a href="">@Odin Project</a>
+        </p>
     </footer>
     <script src="javascript.js"></script>
 </body>
