Implement Eraser button (#8)

--- a/index.html
+++ b/index.html
@@ -16,16 +16,14 @@
                     <span>Pen Colour</span>
                     <input type="color" name="colour" id="colour-wheel">
                 </div>
+                <button id="pen-btn">Pen</button>
                 <button id="eraser-btn">Eraser</button>
                 <button id="randomizer-btn">Colour Randomizer</button>
                 <button id="lighten-btn">Lighten</button>
                 <button id="darken-btn">Darken</button>
             </div>
-
             <div id="canvas">
-    
             </div>
-
             <div class="right-sidebar">
                 <div class="bar">
                     <span><strong>Bar Size</strong></span>
@@ -36,7 +34,6 @@
                 <button id="setting"><i class="fa fa-gear" style="font-size:36px;"></i></button>
             </div>
         </div>
-            
     </section>
     <footer>
         <p>
