Modified draw method to change with a mode (#11)

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
                     <input type="range" name="grid" id="grid-id" min="0" min="100">
                 </div>
                 <button id="clear-btn">Clear</button>
-                <button id="display-grid-btn">Toggle Grid Display</button>
+                <h4>Toggle Grid Border</h4>
+                <label class="switch">
+                    <input type="checkbox" name="" id="grid-border-switch">
+                </label>
                 <button id="setting"><i class="fa fa-gear" style="font-size:36px;"></i></button>
             </div>
         </div>
